cmake_minimum_required(VERSION 3.15)
project(pd1 C)

set(CMAKE_C_STANDARD 11)

add_executable(address_of lec02/address_of.c)
add_executable(celsius lec02/celsius.c)
add_executable(division lec02/division.c)
add_executable(dweight lec02/dweight.c)
add_executable(dweight2 lec02/dweight2.c)
add_executable(float lec02/float.c)
add_executable(main lec02/main.c lec02/header.h)
add_executable(hello lec02/hello.c)
add_executable(pun lec02/pun.c)
add_executable(return_minus1 lec02/return_minus1.c)
add_executable(addfrac lec03/addfrac.c)
add_executable(escape_seq lec03/escape_seq.c)
add_executable(print_backslash_and_percent_sign lec03/print_backslash_and_percent_sign.c)
add_executable(tprintf lec03/tprintf.c)
add_executable(division_and_remainder lec04/division_and_remainder.c)
add_executable(remainder lec04/remainder.c)
add_executable(upc lec04/upc.c)
add_executable(broker lec05/broker.c)
add_executable(date lec05/date.c)
add_executable(checking lec06/checking.c)
add_executable(countdown lec06/countdown.c)
add_executable(numdigits lec06/numdigits.c)
add_executable(square lec06/square.c)
add_executable(square2 lec06/square2.c)
add_executable(sum lec06/sum.c)
add_executable(print_limits lec07/print_limits.c)
add_executable(sum2 lec07/sum2.c)
